@startuml
class "AbstractAdapter" as C_0000731057524502862038
class C_0000731057524502862038 {
+metaObject() const : const QMetaObject *
+qt_metacast(const char * ) : void *
+qt_metacall(QMetaObject::Call , int , void ** ) : int
{static} +tr(const char * s, const char * c = nullptr, int n = -1) : QString
{static} +trUtf8(const char * s, const char * c = nullptr, int n = -1) : QString
{static} -qt_static_metacall(QObject * , QMetaObject::Call , int , void ** ) : void
+AbstractAdapter(QWidget * parent = nullptr) : void
+~AbstractAdapter() : void
{static} +staticMetaObject : const QMetaObject
}
class "NotificationWindow" as C_0002019064467633740288
class C_0002019064467633740288 {
+metaObject() const : const QMetaObject *
+qt_metacast(const char * ) : void *
+qt_metacall(QMetaObject::Call , int , void ** ) : int
{static} +tr(const char * s, const char * c = nullptr, int n = -1) : QString
{static} +trUtf8(const char * s, const char * c = nullptr, int n = -1) : QString
{static} -qt_static_metacall(QObject * , QMetaObject::Call , int , void ** ) : void
+NotificationWindow(QWidget * parent = nullptr) : void
+~NotificationWindow() : void
+updateText(std::string text) : void
+ConfirmClicked() : void
-on_Confirm_clicked() : void
-ui : Ui::NotificationWindow *
{static} +staticMetaObject : const QMetaObject
{static} +WINDOW_ID : const uint32_t
}
class "ConnectionStatusAdapter" as C_0001583306686458326358
class C_0001583306686458326358 {
+ConnectionStatusAdapter(QWidget * parent = nullptr) : void
+~ConnectionStatusAdapter() : void
+connectionError(QAbstractSocket::SocketError socketError) : void
+connected() : void
#window : NotificationWindow *
}
class "AbstractRuntimeException" as C_0000440641139668157657
class C_0000440641139668157657 {
+AbstractRuntimeException(const std::string & what_arg) : void
}
class "ConfigurationException" as C_0001680705762680013373
class C_0001680705762680013373 {
+ConfigurationException(const std::string & what_arg) : void
}
class "SharedObjects" as C_0000254919367871000869
class C_0000254919367871000869 {
+~SharedObjects() : void
{static} +setSettingsFilePath(std::string path) : void
{static} +getPointer() : std::shared_ptr<SharedObjects>
+getSettings() : const QJsonObject
+getSocket() : std::shared_ptr<QTcpSocket>
+windowIdGet(uint32_t name, uint32_t copy) : uint64_t
+windowExists(uint32_t name, uint32_t copy) : bool
+windowExists(uint64_t windowId) : bool
+windowSet(QWidget * window, uint32_t name, uint32_t copy = 0) : void
+windowGet(uint32_t name, uint32_t copy = 0) : std::shared_ptr<QWidget>
+adapterAdd(AbstractAdapter * ) : void
#SharedObjects() : void
#SharedObjects(const SharedObjects & ) : void
#operator=(SharedObjects & ) : SharedObjects &
#setupSettings() : void
#settings : QJsonObject
#socket : std::shared_ptr<QTcpSocket>
#windowsHeap : std::map<uint64_t,std::shared_ptr<QWidget>> *
#adaptersHeap : std::vector<std::unique_ptr<AbstractAdapter>> *
{static} #self : std::shared_ptr<SharedObjects>
{static} #settingsFilePath : std::string
}
class "TeacherStatsWindow" as C_0002164097913541176924
class C_0002164097913541176924 {
+metaObject() const : const QMetaObject *
+qt_metacast(const char * ) : void *
+qt_metacall(QMetaObject::Call , int , void ** ) : int
{static} +tr(const char * s, const char * c = nullptr, int n = -1) : QString
{static} +trUtf8(const char * s, const char * c = nullptr, int n = -1) : QString
{static} -qt_static_metacall(QObject * , QMetaObject::Call , int , void ** ) : void
+TeacherStatsWindow(QWidget * parent = nullptr) : void
+~TeacherStatsWindow() : void
-ui : Ui::TeacherStatsWindow *
{static} +staticMetaObject : const QMetaObject
}
class "ClientCredentialsWindow" as C_0000292683579587200697
class C_0000292683579587200697 {
+metaObject() const : const QMetaObject *
+qt_metacast(const char * ) : void *
+qt_metacall(QMetaObject::Call , int , void ** ) : int
{static} +tr(const char * s, const char * c = nullptr, int n = -1) : QString
{static} +trUtf8(const char * s, const char * c = nullptr, int n = -1) : QString
{static} -qt_static_metacall(QObject * , QMetaObject::Call , int , void ** ) : void
+ClientCredentialsWindow(QWidget * parent = nullptr) : void
+~ClientCredentialsWindow() : void
-on_Login_clicked() : void
-on_Register_clicked() : void
-ui : Ui::ClientCredentialsWindow *
{static} +staticMetaObject : const QMetaObject
{static} +WINDOW_ID : const uint32_t
}
C_0001583306686458326358 --> C_0002019064467633740288 : #window
C_0000731057524502862038 <|-- C_0001583306686458326358
C_0000440641139668157657 <|-- C_0001680705762680013373
C_0000254919367871000869 ..> C_0000731057524502862038
C_0000254919367871000869 --> C_0000731057524502862038 : #adaptersHeap
C_0000254919367871000869 --> C_0000254919367871000869 : #self

'Generated with clang-uml, version 0.3.5-17-gbca1162
'LLVM version clang version 15.0.7
@enduml
